--- a/frontend-cemos/src/app/components/conceitos-table/conceitos-table.html
+++ b/frontend-cemos/src/app/components/conceitos-table/conceitos-table.html
@@ -19,6 +19,7 @@
               ({{ conceito.palavra_chave }})
             </span>
             <span class="assunto-meta" *ngIf="conceito.assunto">
+              <mat-icon class="assunto-icon">label</mat-icon>
               Assunto: {{ conceito.assunto }}
             </span>
           </div>
