--- a/frontend-cemos/src/app/components/conceitos/conceitos.scss
+++ b/frontend-cemos/src/app/components/conceitos/conceitos.scss
@@ -151,10 +151,24 @@
 		}
 
 		&.btn-fullscreen,
-		&.btn-outline {
+		&.btn-outline,
+		&.btn-pdf {
 			background: white;
 			color: #000;
 			border: 2px solid #000;
+			display: flex;
+			align-items: center;
+			gap: 0.5rem;
+
+			mat-icon {
+				font-size: 1.2rem;
+				width: 1.2rem;
+				height: 1.2rem;
+			}
+
+			mat-spinner {
+				display: inline-block;
+			}
 
 			&:hover:not(:disabled) {
 				background: #000;
@@ -478,10 +492,24 @@
 			cursor: not-allowed;
 		}
 
-		&.btn-outline {
+		&.btn-outline,
+		&.btn-pdf {
 			background: white;
 			color: #000;
 			border: 2px solid #000;
+			display: flex;
+			align-items: center;
+			gap: 0.5rem;
+
+			mat-icon {
+				font-size: 1.2rem;
+				width: 1.2rem;
+				height: 1.2rem;
+			}
+
+			mat-spinner {
+				display: inline-block;
+			}
 
 			&:hover:not(:disabled) {
 				background: #000;
