--- a/frontend-cemos/src/app/modules/app8-direito/app8-direito-flashcards/app8-direito-flashcards.html
+++ b/frontend-cemos/src/app/modules/app8-direito/app8-direito-flashcards/app8-direito-flashcards.html
@@ -1,1 +1,7 @@
-<p>app8-direito-flashcards works!</p>
+<section class="flashcards-section">
+    <app-flash-cards 
+      [bibliografiaIds]="bibliografiaIds"
+      [bibliografiaPath]="bibliografiaPath">
+    </app-flash-cards>
+  </section>
+
